Fixed up new header image on mobile view.

--- a/sites/all/modules/dosomething/dosomething_campaign_styles/campaign_styles/2013/teensforjeans/sass/_sections.sass
+++ b/sites/all/modules/dosomething/dosomething_campaign_styles/campaign_styles/2013/teensforjeans/sass/_sections.sass
@@ -34,7 +34,6 @@ a
 .header
   position: relative
   width: 100%
-  height: 360px
   background-color: #e7e8e9
   //background-image: url($bg-header-image)
   background-repeat: no-repeat
